# herod

./: README.md  config.toml  pyproject.toml
src/herod/: __main__.py  cli.py  config.py  database.py  feature.py  helpers.py  indexer.py  server.py
