[project]
name = "herod"
version = "0.1.0"
description = "who is the real hero?"
authors = [
    {name = "Aloxaf", email = "Aloxafx@gmail.com"},
]
dependencies = [
    "opencv-python>=4.8.1.78",
    "opencv-contrib-python>=4.8.1.78",
    "pymilvus>=2.3.1",
    "typer[all]>=0.9.0",
    "pydantic>=2.4.2",
    "numpy>=1.25.2",
    "blake3>=0.3.3",
    "lmdb>=1.4.1",
    "uvicorn[standard]>=0.23.2",
    "fastapi[all]>=0.103.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
herod = "herod.cli:main"

[tool.pdm.dev-dependencies]
dev = [
    "setuptools>=68.2.2",
]
